syntax = "proto3";

package pb;

option go_package = "github.com/2landhnal/digital-preservation-shared-payload/pb";

message CreateExtractMetadataResultRequest {
  string objectId = 1;
  int64 statusCode = 2;
  string message = 3;
}

message CreateExtractMetadataResultResponse {
  string message = 1;
}




